--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: jsutils
-Title: What the Package Does (One Line, Title Case)
+Title: 'JavaScript' Utilities for 'R'
 Version: 0.0.0.9000
-Authors@R: 
+Authors@R:
     person(c("Andrew", "R."), "Johnson", , "andrew.johnson@arjohnsonau.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-7000-8065"))
-Description: What the package does (one paragraph).
+Description: A collection of popular/useful JavaScript utilities, including the
+    terser minifier, sass compiler, typescript transpiler, and more.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
+Imports: QuickJSR
