--- a/.github/workflows/R-CMD-check-special.yaml
+++ b/.github/workflows/R-CMD-check-special.yaml
@@ -25,9 +25,9 @@ jobs:
           - { label: "valgrind",
               name: "valgrind",
               container: "ghcr.io/r-hub/containers/valgrind:latest"}
-          - { label: "rchk",
-              name: "rchk",
-              container: "ghcr.io/r-hub/containers/rchk:latest"}
+          #- { label: "rchk",
+          #    name: "rchk",
+          #    container: "ghcr.io/r-hub/containers/rchk:latest"}
 
     env:
       MAKEFLAGS: -j4
