--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,6 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
-Imports: QuickJSR
+Imports:
+    QuickJSR (>= 1.8.1)
 URL: https://andrjohns.github.io/jsutils/
