--- a/.github/workflows/update-bundles.yaml
+++ b/.github/workflows/update-bundles.yaml
@@ -64,7 +64,7 @@ jobs:
             if [[ -n "$(git status -s)" ]]; then
               git config --global user.name "github-actions[bot]"
               git config --global user.email "github-actions[bot]@users.noreply.github.com"
-              git add ./inst/js
+              git add ./inst/js .R/versions.R
               git commit -m "Update JS bundles to latest versions" || echo "No changes to commit"
             git push
           else
