--- a/.github/workflows/update-bundles.yaml
+++ b/.github/workflows/update-bundles.yaml
@@ -33,7 +33,7 @@ jobs:
         working-directory: ./inst/bundle
         run: |
           npm install
-          echo "ESPRIMA_VERSION=$(npm list espree --depth=0 | grep espree | cut -d@ -f2)" >> $GITHUB_ENV
+          echo "ESPRIMA_VERSION=$(npm list esprima --depth=0 | grep esprima | cut -d@ -f2)" >> $GITHUB_ENV
           echo "SASS_VERSION=$(npm list sass --depth=0 | grep sass | cut -d@ -f2)" >> $GITHUB_ENV
           echo "TERSER_VERSION=$(npm list terser --depth=0 | grep terser | cut -d@ -f2)" >> $GITHUB_ENV
           echo "TYPESCRIPT_VERSION=$(npm list typescript --depth=0 | grep typescript | cut -d@ -f2)" >> $GITHUB_ENV
@@ -64,7 +64,7 @@ jobs:
             if [[ -n "$(git status -s)" ]]; then
               git config --global user.name "github-actions[bot]"
               git config --global user.email "github-actions[bot]@users.noreply.github.com"
-              git add ./inst/js .R/versions.R
+              git add ./inst/js ./R/versions.R
               git commit -m "Update JS bundles to latest versions" || echo "No changes to commit"
             git push
           else
