Update readme and arg names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,5 @@ export(esprima_tokenize)
 export(js_versions)
 export(sass)
 export(terser)
-export(typescript_transpile)
+export(typescript)
 importFrom(QuickJSR,JSContext)
