--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -24,7 +24,7 @@ jobs:
           - {os: macos-latest,   r: 'release'}
           - {os: macos-latest,   r: 'oldrel'}
 
-          - {os: windows-11-arm, r: '4.5.2'}
+          - {os: windows-11-arm, r: 'release'}
           - {os: windows-latest, r: 'devel'}
           - {os: windows-latest, r: 'release'}
           - {os: windows-latest, r: 'oldrel'}
@@ -44,56 +44,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v6
-        with:
-          submodules: true
 
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
-        if: matrix.config.os != 'windows-11-arm' && matrix.config.os != 'wasm'
+        if: matrix.config.os != 'wasm'
         with:
           r-version: ${{ matrix.config.r }}
-          rtools-version: ${{ matrix.config.rtools }}
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
-
-      - name: Install R & RTools (ARM64)
-        if: matrix.config.os == 'windows-11-arm'
-        run: |
-          Invoke-WebRequest `
-              -Uri https://www.r-project.org/nosvn/winutf8/aarch64/R-4-signed/R-${{ matrix.config.r }}-aarch64.exe `
-              -OutFile ../R-${{ matrix.config.r }}-aarch64.exe
-          Start-Process `
-              -FilePath ../R-${{ matrix.config.r }}-aarch64.exe `
-              -ArgumentList "/INSTALL /VERYSILENT /SUPPRESSMSGBOXES" -Wait
-
-          Invoke-WebRequest `
-              -Uri https://github.com/r-hub/rtools45/releases/download/latest/rtools45-aarch64.exe `
-              -OutFile "../rtools45-aarch64.exe"
-          Start-Process `
-              -FilePath "../rtools45-aarch64.exe" `
-              -ArgumentList "/INSTALL /VERYSILENT /SUPPRESSMSGBOXES" -Wait
-
-          echo "C:/rtools45-aarch64/usr/bin;C:/rtools45-aarch64/aarch64-w64-mingw32.static.posix/bin" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
-          echo "C:/Program Files/R-aarch64/R-${{ matrix.config.r }}/bin" | Out-File -Append -FilePath $env:GITHUB_PATH -Encoding utf8
-
-      - name: Install pak on Windows ARM
-        if: matrix.config.os == 'windows-11-arm'
-        run: |
-          libsdir <- file.path(Sys.getenv("TMP"), "Library")
-          dir.create(libsdir, recursive = TRUE, showWarnings = FALSE)
-          cat(sprintf("R_LIB_FOR_PAK=%s\n", libsdir), file = Sys.getenv("GITHUB_ENV"), append = TRUE)
-          cat(sprintf("R_LIBS_USER=%s\n", libsdir), file = Sys.getenv("GITHUB_ENV"), append = TRUE)
-          install.packages("pak", lib = libsdir,
-                           repos = c("https://r-lib.r-universe.dev", "https://cloud.r-project.org"),
-                           Ncpus = 4);
-        shell: Rscript {0}
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck
           needs: check
-          pak-version: ${{ matrix.config.os == 'windows-11-arm' && 'none' || 'stable' }}
 
       - uses: r-lib/actions/check-r-package@v2
         if: matrix.config.os != 'wasm'
@@ -103,6 +67,5 @@ jobs:
 
       - name: Check WASM build
         if: matrix.config.os == 'wasm'
-        run: |
-          rwasm::build("local::.")
+        run: rwasm::build("local::.")
         shell: Rscript {0}
